--- a/sdi-entrega1-2021-1004/src/main/resources/templates/fragments/tableOfertasCompradas.html
+++ b/sdi-entrega1-2021-1004/src/main/resources/templates/fragments/tableOfertasCompradas.html
@@ -5,6 +5,9 @@
 			<th class="col-md-1" th:text="#{Oferta.list.campo1}">titulo</th>
 			<th th:text="#{Oferta.list.campo2}">detalle</th>
 			<th th:text="#{Oferta.list.campo3}">precio</th>
+			<th th:text="#{User.list.campo1}">email</th>
+			<th class="col-md-1"></th>
+			<th class="col-md-1"></th>
 			<th class="col-md-1"></th>
 			<th class="col-md-1"></th>
 		</tr>
@@ -14,10 +17,7 @@
 			<td th:text="${of.titulo}">titulo</td>
 			<td th:text="${of.detalle}">detalle</td>
 			<td th:text="${of.precio}">100</td>
-			<td><a th:href="${'/oferta/edit/' + of.id}"
-				th:text="#{Modificar}">modificar</a>
-			<td><a th:href="${'/oferta/delete/' + of.id}"
-				th:text="#{Eliminar}">eliminar</a></td>
+			<td th:text="${of.usuario.email}">email@asdf.com</td>
 		</tr>
 	</tbody>
 </table>
