--- a/sdi-entrega1-2021-1004/src/main/resources/templates/login.html
+++ b/sdi-entrega1-2021-1004/src/main/resources/templates/login.html
@@ -23,6 +23,7 @@
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
 					<button type="submit" class="btn btn-primary" th:text="#{Button.login}">Login</button>
+					<span th:if="${param.error}" class="text-danger">Credenciales incorrectas</span>
 				</div>
 			</div>
 			<input type="hidden" name="${_csrf.parameterName}"
